fixed mobile spacing

--- a/src/index.css
+++ b/src/index.css
@@ -429,7 +429,7 @@ main div section:nth-of-type(3) > div div p {
 
   main > section {
     margin: 0rem auto;
-    padding: 0rem 0rem 46rem 0rem;
+    padding: 0rem 0rem 51rem 0rem;
   }
 
   h1 {
